# task-trackers-synchronizer

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  k6.js  pyproject.toml
.github/workflows/: dast.yml  extra_code.yml  manual.yml  master.yml  performance.yml  semgrep.yml
app/: main.py
app/api/: crud.py
app/api/endpoints/: fields.py  fields_mock.py  hello.py  projects.py  rules.py  rules_mock.py  trackers.py  trackers_mock.py
app/core/: application.py  condition.py  config.py  db.py  issues.py  logger.py  project.py  providers.py  rule.py  syncer.py  task_tracker.py
app/services/: issues.py  rules.py  syncer.py
monitoring/: prometheus.yml
tests/: conf_test.py  db_test.py  issue_test.py  mock_test.py  rule_test.py  syncer_test.py
tests/endpoints/: api_boards_test.py  api_rules_test.py  api_test.py  sync_test.py
