[tool.poetry]
name = "fastapi-starter-template"
version = "0.1.0"
description = ""
authors = ["Zidane Wright <zidanewright@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
tox = "^4.14.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
